<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_members_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circle_button_shape"
        app:backgroundTint="@color/quantum_pink"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/open_map_button_editable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/open_map_button_editable" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_group_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:layout_marginEnd="10dp"
        android:background="#00000000"
        android:padding="0dp"
        app:icon="@drawable/ic_outline_edit_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:iconTint="@color/quantum_grey800"
        app:layout_constraintBottom_toBottomOf="@+id/delete_group_button"
        app:layout_constraintEnd_toStartOf="@+id/delete_group_button"
        app:layout_constraintTop_toTopOf="@+id/delete_group_button" />

    <EditText
        android:id="@+id/group_display_name_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Group Name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/group_display_description_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Description"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/group_display_name_editable"
        app:layout_constraintTop_toBottomOf="@+id/group_display_name_editable" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Meeting Date : "
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/group_date_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/group_time_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="Time"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/group_date_editable" />

    <TextView
        android:id="@+id/group_members_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Group Members :"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/group_display_name_editable"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="group_members_editable"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/group_attendees_view_editable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/group_display_description_editable"
        app:layout_constraintTop_toTopOf="@+id/barrier4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <Button
        android:id="@+id/open_map_button_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OPEN MAP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView

        android:id="@+id/group_address_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Address"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Meeting Point : "
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/group_display_description_editable"
        app:layout_constraintTop_toBottomOf="@+id/group_display_description_editable" />

    <TextView
        android:id="@+id/group_owner_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="owner"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Group Owner : "
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/group_date_editable" />

    <Button
        android:id="@+id/delete_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="Delete Group"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/group_display_name_editable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group_display_name_editable" />
</androidx.constraintlayout.widget.ConstraintLayout>