...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_card_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:text="Group Name"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/group_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:text="Num of participants"
            android:textAlignment="center"
...
